--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <title>UXD Admin</title>
 
     <!-- Bootstrap Core CSS -->
-   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
     <!-- Custom CSS -->
     <link href="styles/sb-admin.css" rel="stylesheet">
